force-app/main/default/objects/Order_Document__c/Order_Document__c.object-meta.xml
<CustomObject>
    <label>Order Document</label>
    <nameField>
        <displayFormat>DOC{0000000}</displayFormat>
        <label>Order Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>