force-app/main/default/objects/Order_Document__c/fields/document_label__c.field-meta.xml
<CustomField>
    <fullName>document_label__c</fullName>
    <label>Document Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>