force-app/main/default/objects/Order_Document__c/fields/document_link__c.field-meta.xml
<CustomField>
    <fullName>document_link__c</fullName>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>