force-app/main/default/objects/Order_Document__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Order Documents</relationshipLabel>
    <relationshipName>Order_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>