force-app/main/default/objects/Order_Document__c/fields/ordexp_tad_order__c.field-meta.xml
<CustomField>
    <fullName>ordexp_tad_order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAD Order</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipLabel>Order Documents</relationshipLabel>
    <relationshipName>Order_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>