force-app/main/default/objects/Order_Document__c/listViews/no_order.listView-meta.xml
<ListView>
    <fullName>no_order</fullName>
    <columns>NAME</columns>
    <columns>order__c</columns>
    <columns>document_label__c</columns>
    <columns>document_link__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>order__c</field>
        <operation>equals</operation>
    </filters>
    <label>no order</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>